# LocalCode

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
bench/suites/smoke/: suite.toml
bench/suites/smoke/tasks/c-ringbuf/: task.toml
bench/suites/smoke/tasks/c-ringbuf/hidden/: test_ringbuf.c
bench/suites/smoke/tasks/c-ringbuf/solution/: ringbuf.c
bench/suites/smoke/tasks/c-ringbuf/workspace/: ringbuf.c  ringbuf.h
bench/suites/smoke/tasks/c-rle/: task.toml
bench/suites/smoke/tasks/c-rle/hidden/: test_rle.c
bench/suites/smoke/tasks/c-rle/solution/: rle.c
bench/suites/smoke/tasks/c-rle/workspace/: rle.c  rle.h
bench/suites/smoke/tasks/js-debounce/: task.toml
bench/suites/smoke/tasks/js-debounce/hidden/: debounce.test.js
bench/suites/smoke/tasks/js-debounce/solution/: debounce.js
bench/suites/smoke/tasks/js-debounce/workspace/: debounce.js
bench/suites/smoke/tasks/js-slugify/: task.toml
bench/suites/smoke/tasks/js-slugify/hidden/: slugify.test.js
bench/suites/smoke/tasks/js-slugify/solution/: slugify.js
bench/suites/smoke/tasks/js-slugify/workspace/: slugify.js
bench/suites/smoke/tasks/py-dotenv/: task.toml
bench/suites/smoke/tasks/py-dotenv/hidden/: test_dotenv.py
bench/suites/smoke/tasks/py-dotenv/solution/: dotenv_parser.py
bench/suites/smoke/tasks/py-dotenv/workspace/: dotenv_parser.py
bench/suites/smoke/tasks/py-lru/: task.toml
bench/suites/smoke/tasks/py-lru/hidden/: test_lru.py
bench/suites/smoke/tasks/py-lru/solution/: lru.py
bench/suites/smoke/tasks/py-lru/workspace/: lru.py
bench/suites/smoke/tasks/rs-brackets/: task.toml
bench/suites/smoke/tasks/rs-brackets/hidden/tests/: brackets_test.rs
bench/suites/smoke/tasks/rs-brackets/solution/src/: lib.rs
bench/suites/smoke/tasks/rs-brackets/workspace/: Cargo.toml
bench/suites/smoke/tasks/rs-brackets/workspace/src/: lib.rs
bench/suites/smoke/tasks/rs-stats/: task.toml
bench/suites/smoke/tasks/rs-stats/hidden/tests/: stats_test.rs
bench/suites/smoke/tasks/rs-stats/solution/src/: lib.rs
bench/suites/smoke/tasks/rs-stats/workspace/: Cargo.toml
bench/suites/smoke/tasks/rs-stats/workspace/src/: lib.rs
crates/localcode-agent/: Cargo.toml
crates/localcode-agent/src/: lib.rs  mcp.rs  model_ops.rs  session_store.rs  skills.rs  tools.rs
crates/localcode-api-client/: Cargo.toml
crates/localcode-api-client/src/: lib.rs
crates/localcode-assistant/: Cargo.toml
crates/localcode-assistant/src/: agent.rs  constants.rs  deploy_hints.rs  deploy_preset.rs  install.rs  lib.rs  runtime.rs
crates/localcode-backends/: Cargo.toml
crates/localcode-backends/src/: colibri.rs  deploy.rs  diagnose.rs  download.rs  install.rs  lib.rs  llamacpp.rs  models_store.rs  monitor.rs  ollama.rs  openwebui.rs  proc.rs  registry.rs  sglang.rs  smoke.rs  vllm.rs
crates/localcode-bench/: Cargo.toml
crates/localcode-bench/src/: builtin.rs  docker.rs  fsops.rs  lib.rs  pull.rs  qa.rs  report.rs  runner.rs  spec.rs
crates/localcode-cli/: Cargo.toml
crates/localcode-cli/src/: main.rs
crates/localcode-cloud/: Cargo.toml
crates/localcode-cloud/src/: lib.rs
crates/localcode-core/: Cargo.toml
crates/localcode-core/src/: config.rs  error.rs  events.rs  ids.rs  lib.rs  paths.rs  runtime.rs  theme.rs
crates/localcode-gpu/: Cargo.toml
crates/localcode-gpu/src/: lib.rs
crates/localcode-hf/: Cargo.toml
crates/localcode-hf/src/: cache.rs  lib.rs  quant.rs  url_builder.rs
crates/localcode-log/: Cargo.toml
crates/localcode-log/src/: lib.rs
crates/localcode-payments/: Cargo.toml
crates/localcode-payments/src/: lib.rs
crates/localcode-remote/: Cargo.toml
crates/localcode-remote/src/: lib.rs  provision.rs  ssh.rs
crates/localcode-tui/: Cargo.toml
crates/localcode-tui/src/: app.rs  doctor.rs  lib.rs  markdown.rs  theme.rs  ui.rs  widgets.rs
crates/localcode-upgrade/: Cargo.toml
crates/localcode-upgrade/src/: lib.rs
docs/: 2a Minimal.dc.html  2a Screens.dc.html  ERROR_CODES.md  HANDOFF.md  SPEC-LocalCode-TUI-redesign.md
scripts/: install.ps1  install.sh
server/localcode-server/: Cargo.toml
server/localcode-server/migrations/: 001_init.sql
server/localcode-server/src/: main.rs
suites/sample/: suite.toml
website/: index.html  script.js  styles.css
