[package]
name = "localcode-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LocalCode VPS REST API client"

[dependencies]
localcode-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
