[package]
name = "localcode-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-app AI assistant for diagnosing LocalCode issues"

[dependencies]
localcode-core = { workspace = true }
localcode-agent = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
