[package]
name = "localcode-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-app AI assistant for diagnosing LocalCode issues (local Bonsai + hosted)"

[dependencies]
localcode-core = { workspace = true }
localcode-agent = { workspace = true }
localcode-backends = { workspace = true }
localcode-hf = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
