[package]
name = "localcode-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local inference backend adapters (Ollama, llama.cpp, vLLM, SGLang)"

[dependencies]
localcode-core = { workspace = true }
localcode-gpu = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
