[package]
name = "localcode-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local inference backend adapters (Ollama, llama.cpp, vLLM, SGLang)"

[dependencies]
localcode-core = { workspace = true }
localcode-gpu = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Signal the whole process group when stopping multi-process servers (vLLM /
# SGLang), so their GPU-holding worker children die too. See `proc::kill_tree`.
libc = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
