[package]
name = "localcode-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark suites, runner, and publish payloads"

[dependencies]
localcode-core = { workspace = true }
localcode-api-client = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
