[package]
name = "localcode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LocalCode binary: TUI + headless subcommands"
default-run = "localcode"

[[bin]]
name = "localcode"
path = "src/main.rs"

[dependencies]
localcode-core = { workspace = true }
localcode-log = { workspace = true }
localcode-gpu = { workspace = true }
localcode-hf = { workspace = true }
localcode-backends = { workspace = true }
localcode-bench = { workspace = true }
localcode-agent = { workspace = true }
localcode-assistant = { workspace = true }
localcode-tui = { workspace = true }
localcode-api-client = { workspace = true }
localcode-upgrade = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
