[package]
name = "localcode-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloud hosting adapters: RunPod, Vast.ai, Akash"

[dependencies]
localcode-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
