[package]
name = "localcode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types: config, errors, events, ids for LocalCode"

[dependencies]
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
