[package]
name = "localcode-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU discovery and VRAM fit prediction"

[dependencies]
localcode-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
