[package]
name = "localcode-hf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hugging Face registry client with mirrors and cache"

[dependencies]
localcode-core = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
