[package]
name = "localcode-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured logging and secret redaction for LocalCode"

[dependencies]
localcode-core = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
