[package]
name = "localcode-payments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crypto top-up client and balance helpers (USDC on Base)"

[dependencies]
localcode-core = { workspace = true }
localcode-api-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
