[package]
name = "localcode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LocalCode terminal UI (ratatui)"

[dependencies]
localcode-core = { workspace = true }
localcode-log = { workspace = true }
localcode-gpu = { workspace = true }
localcode-hf = { workspace = true }
localcode-backends = { workspace = true }
localcode-remote = { workspace = true }
localcode-cloud = { workspace = true }
localcode-payments = { workspace = true }
localcode-bench = { workspace = true }
localcode-agent = { workspace = true }
localcode-assistant = { workspace = true }
localcode-api-client = { workspace = true }
localcode-upgrade = { workspace = true }
async-trait = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
unicode-width = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
