[package]
name = "localcode-upgrade"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Update checking and self-update for LocalCode"

[dependencies]
localcode-core = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
