[package]
name = "localcode-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LocalCode VPS API (auth, benchmarks, billing, model hints)"

[[bin]]
name = "localcode-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tower = { workspace = true }
